[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/thuner/3.png" type="Texture" id=1]
[ext_resource path="res://assets/thuner/0.png" type="Texture" id=2]
[ext_resource path="res://assets/thuner/2.png" type="Texture" id=3]
[ext_resource path="res://assets/thuner/5.png" type="Texture" id=4]
[ext_resource path="res://assets/thuner/6.png" type="Texture" id=5]
[ext_resource path="res://assets/thuner/1.png" type="Texture" id=6]
[ext_resource path="res://assets/thuner/4.png" type="Texture" id=7]
[ext_resource path="res://scripts/ultimate.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "start",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.50965

[node name="ultimate" type="Area2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="thuner" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "fly"
frame = 3
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 21.4554, 4.4273 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 4.08674, 3.23533 )
scale = Vector2( 3.07743, 1.32353 )
[connection signal="area_entered" from="." to="." method="_on_ultimate_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ultimate_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
